Support accesskeys on fake context menu

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -287,20 +287,20 @@
   "config.all.caption": { "message": "All Configs" },
 
 
-  "tabContextMenu.reload.label":      { "message": "Reload Tab" },
-  "tabContextMenu.mute.label":        { "message": "Mute Tab" },
-  "tabContextMenu.unmute.label":      { "message": "Unmute Tab" },
+  "tabContextMenu.reload.label":      { "message": "&Reload Tab" },
+  "tabContextMenu.mute.label":        { "message": "&Mute Tab" },
+  "tabContextMenu.unmute.label":      { "message": "Un&mute Tab" },
 
-  "tabContextMenu.pin.label":         { "message": "Pin Tab" },
-  "tabContextMenu.unpin.label":       { "message": "Unpin Tab" },
-  "tabContextMenu.duplicate.label":   { "message": "Duplicate Tab" },
-  "tabContextMenu.tearOff.label":     { "message": "Move to New Window" },
+  "tabContextMenu.pin.label":         { "message": "&Pin Tab" },
+  "tabContextMenu.unpin.label":       { "message": "Unpin Ta&b" },
+  "tabContextMenu.duplicate.label":   { "message": "&Duplicate Tab" },
+  "tabContextMenu.tearOff.label":     { "message": "Move to New &Window" },
 
-  "tabContextMenu.reloadAll.label":   { "message": "Reload All Tabs" },
-  "tabContextMenu.bookmarkAll.label": { "message": "Bookmark All Tabs…" },
-  "tabContextMenu.closeAfter.label":  { "message": "Close Tabs to the Right" },
-  "tabContextMenu.closeOther.label":  { "message": "Close Other Tabs" },
+  "tabContextMenu.reloadAll.label":   { "message": "Reload &All Tabs" },
+  "tabContextMenu.bookmarkAll.label": { "message": "Bookmark All &Tabs…" },
+  "tabContextMenu.closeAfter.label":  { "message": "Close Tabs to the R&ight" },
+  "tabContextMenu.closeOther.label":  { "message": "Cl&ose Other Tabs" },
 
-  "tabContextMenu.undoClose.label":   { "message": "Undo Close Tab" },
-  "tabContextMenu.close.label":       { "message": "Close Tab" }
+  "tabContextMenu.undoClose.label":   { "message": "&Undo Close Tab" },
+  "tabContextMenu.close.label":       { "message": "&Close Tab" }
 }
