--- a/webextensions/_locales/zh_CN/messages.json
+++ b/webextensions/_locales/zh_CN/messages.json
@@ -51,14 +51,14 @@
   "message.updatedFromLegacy.description": { "message": "Tree Style Tab 目前基于 WebExtensions 技术以支持 Firefox 57 及后续版本。它提供一个侧栏以作为可选用的垂直标签栏。如果您没看到，按“F1”键或单击工具栏中的“Tree Style Tab”按钮来激活 Tree Style Tab 侧栏面板。" },
 
 
-  "context.reloadTree.label": { "message": "重新载入此树" },
-  "context.reloadDescendants.label": { "message": "重新载入子项" },
-  "context.closeTree.label": { "message": "关闭此树" },
-  "context.closeDescendants.label": { "message": "关闭子项" },
-  "context.closeOthers.label": { "message": "关闭其他标签页（不含此树）" },
-  "context.collapseAll.label": { "message": "全部折叠" },
-  "context.expandAll.label": { "message": "全部展开" },
-  "context.bookmarkTree.label": { "message": "将此树加为书签…" },
+  "context.reloadTree.label": { "message": "重新载入此树(&R)" },
+  "context.reloadDescendants.label": { "message": "重新载入子项(&E)" },
+  "context.closeTree.label": { "message": "关闭此树(&C)" },
+  "context.closeDescendants.label": { "message": "关闭子项(&L)" },
+  "context.closeOthers.label": { "message": "关闭其他标签页（不含此树）(&O)" },
+  "context.collapseAll.label": { "message": "全部折叠(&P)" },
+  "context.expandAll.label": { "message": "全部展开(&X)" },
+  "context.bookmarkTree.label": { "message": "将此树加为书签(&B)…" },
 
 
   "config.appearance.caption": { "message": "外观" },
