--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -141,7 +141,7 @@
   "config.maxTreeLevel.after": { "message": "階層までインデント表示する（※負の値を指定した場合は無制限）" },
 
   "config.faviconizePinnedTabs.label": { "message": "ピン留めされたタブはアイコンのみ表示する" },
-  "config.showContextualIdentitiesSelector.label": { "message": "「新しいタブ」ボタンにコンテナータブの選択メニューを表示する" },
+  "config.showContextualIdentitiesSelector.label": { "message": "「新しいタブ」ボタン上に、コンテナータブの選択メニューを表示する" },
   "config.hideInactiveTabs.label": { "message": "ピン留めされたタブ以外のアクティブでないタブを上のタブバーから隠す（※Firefox 59以降のバージョンで、\"about:config\"で\"extensions.webextensions.tabhide.enabled\"を有効化する必要があります）" },
   "config.animation.label": { "message": "アニメーション効果を有効にする" },
 
@@ -151,6 +151,7 @@
 
   "config.newTab.caption": { "message": "新しいタブの挙動" },
 
+  "config.showNewTabActionSelector.label": { "message": "「新しいタブ」ボタン上に、新しいタブを関係を指定して開くための選択メニューを表示する" },
   "config.autoAttachOnNewTabCommand.before": { "message": "新しい空のタブを" },
   "config.autoAttachOnNewTabCommand.independent": { "message": "独立したタブとして" },
   "config.autoAttachOnNewTabCommand.child": { "message": "現在のタブの子として" },
