--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -151,6 +151,11 @@
   "config.newTab.caption": { "message": "New Tabs Behavior" },
 
   "config.newTabButton.caption": { "message": "\"New Tab\" button" },
+  "config.longPressOnNewTabButton.before":               { "message": "Log-press on the \"New Tab\" button to " },
+  "config.longPressOnNewTabButton.newTabAction":         { "message": "specify where the new tab is opened in" },
+  "config.longPressOnNewTabButton.contextualIdentities": { "message": "choose container" },
+  "config.longPressOnNewTabButton.none":                 { "message": "(nothing)" },
+  "config.longPressOnNewTabButton.after":                { "message": "" },
   "config.showNewTabActionSelector.label":               { "message": "Show selector button on the \"New Tab\" button, to specify where the new tab is opened in" },
   "config.showContextualIdentitiesSelector.label":       { "message": "Show container selector button on the \"New Tab\" button" },
 
