--- a/webextensions/_locales/de/messages.json
+++ b/webextensions/_locales/de/messages.json
@@ -151,9 +151,9 @@
   "config.newTab.caption": { "message": "Verhalten für neue Tabs" },
 
   "config.newTabButton.caption": { "message": "\"Neuer Tab\" Schaltfläche" },
-  "config.longPressOnNewTabButton.before":               { "message": "Die Schaltfläche \"Neuer Tab\" lang gedrückt halten, zum " },
-  "config.longPressOnNewTabButton.newTabAction":         { "message": "auswählen, wo der neue Tab geöffnet werden soll" },
-  "config.longPressOnNewTabButton.contextualIdentities": { "message": "Container auswählen" },
+  "config.longPressOnNewTabButton.before":               { "message": "Die Schaltfläche \"Neuer Tab\" lang gedrückt halten, um " },
+  "config.longPressOnNewTabButton.newTabAction":         { "message": "auszuwählen, wo der neue Tab geöffnet werden soll" },
+  "config.longPressOnNewTabButton.contextualIdentities": { "message": "den Container auszuwählen" },
   "config.longPressOnNewTabButton.none":                 { "message": "(nichts)" },
   "config.longPressOnNewTabButton.after":                { "message": "" },  
   "config.showNewTabActionSelector.label": { "message": "Auswahl bei der Schaltfläche \"Neuer Tab \" anzeigen, wo der neue Tab geöffnet werden soll" },
