Use more meaningful label for "temporary group" checkbox #1736

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -32,7 +32,7 @@
       "title": { "content": "$1", "example": "title" }
     }},
   "groupTab.label.default": { "message": "Group" },
-  "groupTab.temporary.label": { "message": "Temporary Group" },
+  "groupTab.temporary.label": { "message": "Close this tab when there is no more child" },
   "groupTab.fromPinnedTab.label": { "message": "Tabs from $TITLE$",
     "placeholders": {
       "title": { "content": "$1", "example": "title" }
