--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -32,7 +32,7 @@
       "title": { "content": "$1", "example": "タイトル" }
     }},
   "groupTab.label.default": { "message": "グループ" },
-  "groupTab.temporary.label": { "message": "一時的なグループ" },
+  "groupTab.temporary.label": { "message": "子タブがなくなったらこのタブを閉じる" },
   "groupTab.fromPinnedTab.label": { "message": "$TITLE$ から開いたタブ",
     "placeholders": {
       "title": { "content": "$1", "example": "title" }
